# dyn_serde

./: Cargo.toml  README.md
.github/workflows/: cargo-test.yml
benches/: de.rs
src/: de.rs  error.rs  lib.rs  ser.rs
tests/: de.rs  ser.rs
