[package]
name = "dyn_serde"
version = "1.1.2"
authors = ["Huang Yifan <yifan0610@foxmail.com>"]
edition = "2024"
description = "dynamic serialization and deserialization based on serde"
readme = "README.md"
homepage = "https://crates.io/crates/dyn_serde"
repository = "https://github.com/HyfLink/dyn_serde"
documentation = "https://docs.rs/dyn_serde"
license = "MIT OR Apache-2.0"
keywords = ["serde", "no_std"]
categories = ["encoding", "no-std"]

[features]
default = []
std = ["serde/std"]

[dependencies]
[dependencies.serde]
version = "1.0"
default-features = false
features = ["alloc"]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
erased-serde = "0.4.6"

[dev-dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies.serde_json]
version = "1.0"

[[bench]]
name = "de"
harness = false
